1999-02-25  Jonathan Blandford  <jrb@redhat.com>

	* gnome-app-helper.c (gnome_app_fill_menu_custom): added a quick
	assertion to catch an error I was having.

1999-02-26  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* gtkrc.ko: Fixed a typo.

1999-02-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-entry.c (gnome_icon_entry_get_filename): This had
	some precedence problem. 

1999-02-24  Owen Taylor  <otaylor@redhat.com>

	* gnome-animator.c gnome-app-util.c gnome-canvas.c
	  gnome-icon-list.c gnome-pixmap-entry.c gnome-procbar.[ch]
	  gtk-clock.c gtkdial.c:

	Added in calls to GDK_THREADS_ENTER/LEAVE around timeouts and
	idles so that libgnomeui can be called from a threaded 
	GTK+ application. (Should have no effect on non-threaded
	applications)

Wed Feb 24 15:23:28 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-entry.c: get rid of last remaints of gtk pixmap code

1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-scores.c (gnome_scores_set_logo_pixmap): Kill gtk-pixmap
	and use gnome-pixmap here as well.

	* gnome-icon-entry.c (entry_changed): Use gnome-pixmap instead of
	gtk-pixmap here
	(setup_preview): Kill gtk-pixmap here too.

	* gnome-messagebox.c (gnome_message_box_new): Justify labels to
	the left.

	* gnome-init.c (gnome_add_gtk_arg_callback): Add a hack to allow
	using --gtk-debug-objects (this is required as we create GTK
	objects before gtk_init is called).
	(gnome_init_with_popt_table): Do this before parsing argument.s

Tue Feb 23 00:31:53 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap.c: fix for the new requisition stuff so that
	  set_usize works properly, use gdk_imlib_move_{image,mask} instead
	  of the copy variety to save some time, and add some documentation
	  to the functions that were missing it.

	* gnome-pixmap-entry.[ch]: actually guarantee that disk isn't touched
	  more then once a second when typing, fix a memory leak and cache
	  the last image that was previewed, so that we don't load the same